GL/src/test/deca/codegen/valid/deca_sans_objet/if_Else/GT.deca
// Description :
// Test de l'opérateur '>'.
//
// Resultats :
// 3

{
    float x = 3.5;
    float y = 2.1;
    if (x > y) {
        println(3);
    }
}