GL/src/test/deca/codegen/invalid/overflow_float_DIV.deca
{
    float f = 340282346638528859811704183484516925450.0;

    println(f/ (f*2));
}